# garagem

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: admin.py  apps.py
garagem/migrations/: 0001_initial.py  0002_veiculo_imagem.py  0003_remove_veiculo_imagem_veiculo_imagem.py  0004_veiculo_acessorio_alter_veiculo_descricao_and_more.py
garagem/models/: __init__.py  acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  acessorio.py  cor.py  marca.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
